--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 :root{
-	--main-color: #147B4E;
+	--main-color: #00214A;
+	--secondary-color: #0D3F7C;
+	--bg-color: #f5f5f5;
 	--text-color-active: ;
 	--text-color-inactive: ;
 }
@@ -16,15 +18,6 @@
 
 	}
 
-	#sidebar ul.components {
-		top: 4% !important;
-		/*position: absolute;*/
-	}
-
-	img {
-		top: 2% !important;
-	}
-
 	.card {
 		margin-top: 1rem !important; 
 		margin-left: 1rem !important;
@@ -32,7 +25,7 @@
 	}
 
 	.card-title {
-		font-family: 'Saira Extra Condensed', sans-serif;
+		font-family: "JetBrains Mono";
 	  	font-weight: normal;
 	  	font-size: 1.5rem !important;
 	}
@@ -44,9 +37,16 @@
 	  	margin-left: 0;
 	}
 
+	section.events-section li {
+		margin-left: 1em !important;
+		font-family: "JetBrains Mono";
+	  	font-weight: 200;
+	  	font-size: 1em !important;
+	}
+
 	section.skills-section li {
 		margin-left: 1em !important;
-	  	font-family: JetBrains Mono;
+		font-family: "JetBrains Mono";
 	  	font-weight: 200;
 	  	font-size: 1em !important;
 	}
@@ -66,7 +66,7 @@
 		padding-right: 1rem;
 		padding-bottom: 2rem;
 		max-width: 100px;
-		/*position: absolute;*/
+
 	}
 
 	p {
@@ -120,7 +120,7 @@
 }
 
 body {
-    background-color: #f5f5f5 !important;
+    background-color: var(--bg-color) !important;
 }
 
 h1 {
@@ -134,14 +134,14 @@ img {
 	border-radius: 70%;
 	width: 200px;
     height: 200px;
-    border: 7px solid #1DAF70;
+    border: 7px solid var(--secondary-color);;
     position: relative;
-  	top: 15%;
+  	top: 10vh;
 }
 
 p {
   	margin-left: 2em;
-  	font-family: JetBrains Mono;
+  	font-family: "JetBrains Mono";
   	font-weight: 200;
   	font-size: 1.5em;
 }
@@ -165,32 +165,53 @@ p {
 
 .btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited {
 	background-color: var(--main-color) !important;
-	border-color: #1DAF70 !important;
+	border-color: var(--secondary-color) !important;
 }
 
 .card {
 	margin-top: 1.5rem;
+
 }
 
+.card-link:hover {
+
+	background-color: var(--secondary-color) !important;
+
+}
+
+.card-link {
+
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	margin: 10px;
+
+}
+
+.card-body {
+	display: flex;
+	flex-direction: column;
+}  
+
 .card-title {
-	font-family: 'Saira Extra Condensed', sans-serif;
-  	font-weight: normal;
-  	font-size: 2em;
+	font-family: "JetBrains Mono";
+	font-weight: normal;
+  	font-size: 1em;
 }
 
 .card-text {
 	font-family: Helvetica;
   	font-weight: 200;
-  	font-size: 1.5em;
+  	font-size: 1em;
   	margin-left: 0;
 }
 
-section.projects-section{
- 	padding-top: 12rem;
-}
+section.events-section li {
+	margin-left: 2em;
+  	font-family: "JetBrains Mono";
+  	font-weight: 200;
+  	font-size: 1.5em;
 
-section.skills-section{
-	padding-top: 15rem;
 }
 
 section.projects-section .card{
@@ -200,7 +221,7 @@ section.projects-section .card{
 
 section.skills-section li {
 	margin-left: 2em;
-  	font-family: JetBrains Mono;
+  	font-family: "JetBrains Mono";
   	font-weight: 200;
   	font-size: 1.5em;
 }
@@ -212,7 +233,7 @@ section.education-section p{
 section {
 	display: block;
 	align-items: center;
-	padding-top: 22rem;
+	padding-top: 12rem;
 	padding-left: 3rem;
 	max-width: 75rem;
 	padding-right: 2rem;
@@ -223,7 +244,6 @@ section {
 	color: var(--main-color);
 }
 
-
 .social-icons .social-icon {
     height: 3.5rem;
     width: 3.5rem;
@@ -231,7 +251,7 @@ section {
     align-items: center;
     justify-content: center;
     margin: 1rem;
-    color: white;
+    color: var(--bg-color);
     background-color: var(--main-color);
     border-radius: 100%;
     font-size: 1.5rem;
@@ -242,7 +262,7 @@ section {
 	margin-right: 0;
 }
 .social-icons .social-icon:hover {
-	background-color: #119DA4;
+	background-color: var(--secondary-color);
 }
 
 #sidebar {
@@ -256,32 +276,31 @@ section {
 
 #sidebar ul.components {
     position: relative;
-  	top: 17%;
+  	top: 12vh;
   	text-align: center;
   	display: block;
-  	font-family: "Saira Extra Condensed";
+	font-family: "Source Code Pro";
   	font-weight: bold;
 }
 
 #sidebar ul li a {
     padding: 10px;
-    font-size: 3em;
+    font-size: 2em;
     display: block;
     text-decoration: none;
-    color: #86BA90;
+    color: var(--bg-color);
 }
 
 #sidebar ul li a:hover {
     color: var(--main-color) !important;
-    background: #fff;
+    background: var(--bg-color);
 }
 
 #sidebar ul li.active > a {
-    color: #fff;
+    color: var(--bg-color);
 }
 
 ul ul a {
     font-size: 0.9em !important;
     padding-left: 30px !important;
-    background: #6d7fcc;
 }
